# zone-fade-detector

./: .cursorrules  .env.backup  .env.docker  .env.example  .gitignore  .resume  COMMIT_SUMMARY.md  COMPREHENSIVE_BACKTEST_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.strategy-testing  FINAL_PROJECT_SUMMARY.md  FINAL_TODO_COMPLETION_SUMMARY.md  LICENSE  MASTER_TEST_RESULTS_AND_ANALYSIS.md  MEDIUM_PRIORITY_COMPLETE.md  MONTE_CARLO_SUMMARY.md  Makefile  Makefile.docker  OPERATIONAL_ANALYSIS.md  PARALLEL_STRATEGY_TESTING_COMPLETE.md  PARALLEL_TESTING_README.md  PERFORMANCE_VALIDATION_COMPLETE.md  PHASE2_RESULTS_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_EVIDENCE_REPORT.md  PHASE_3_SUMMARY.md  PHILOSOPHICAL_REFLECTIONS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.Docker.md  README.md  README_BITCOIN.md  SESSION_CHECKPOINT.md  SESSION_SUMMARY.md  STRATEGY_ANALYSIS.md  SWING_TRADING_SUMMARY.md  TODO_LIST_FINAL_STATUS.md  VALIDATION_RESULTS_SUMMARY.md  (+51 more)
backtesting/: 5year_zone_fade_backtest.py  Dockerfile  ENTRY_POINT_LOGIC_UPDATE.md  README.md  README_CLEAN_VISUALIZER.md  README_MINIMAL_VISUALIZER.md  README_PROPER_CANDLESTICKS.md  README_TRADINGVIEW_VISUALIZER.md  README_VISUALIZER.md  analyze_hard_stops.py  analyze_results.py  asset_performance_analyzer.py  backtest_2024_1year.py  backtest_2024_complete_architecture.py  backtest_2024_core.py  backtest_2024_corrected_window_tracking.py  backtest_2024_december_debug.py  backtest_2024_efficient_parallel.py  backtest_2024_efficient_validation.py  backtest_2024_enhanced_validation.py  backtest_2024_entry_points.py  backtest_2024_full_strategy.py  backtest_2024_full_validation.py  backtest_2024_improved.py  backtest_2024_parallel_entry_points.py  backtest_2024_quick_entry_points.py  backtest_2024_simple.py  backtest_2024_simple_entry_points.py  backtest_bitcoin.py  choch_confirmation_system.py  clean_entry_visualizer.py  compare_validation_scripts.py  compare_window_tracking.py  comprehensive_backtest_2024.py  corrected_exit_strategy.py  corrected_risk_calculation_backtest.py  corrected_trading_simulator.py  corrected_zone_implementation.py  corrected_zone_quantity_backtest.py  create_seaborn_index.py  (+78 more)
config/: bitcoin_backtest.yaml  bitcoin_config.yaml  config.docker.yaml  config.example.yaml  config.yaml
docs/: 1YEAR_BACKTEST_RESULTS.md  2024_RESULTS_SUMMARY.md  5YEAR_BACKTESTING_RESULTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BACKTESTING_GUIDE.md  BACKTESTING_PLAN.md  CHANGELOG.md  CONTRIBUTORS.md  DISCORD_SETUP.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_BACKTEST_RESULTS.md  ENHANCEMENT_IMPLEMENTATION_COMPLETE.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  ENHANCEMENT_IMPLEMENTATION_STATUS.md  FINAL_PROJECT_STATUS.md  GITHUB_READY_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS_UPDATE.md  MANUAL_VALIDATION_GUIDE.md  PRD.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REPORTING_STANDARDS.md  REPRODUCIBILITY.md  SETUP_GUIDE.md  SETUP_RULES.md  STRATEGY_DEVELOPMENT.md  STRATEGY_TESTING_FRAMEWORK.md  VALIDATION_METHODOLOGY.md  VOLUME_SPIKE_IMPLEMENTATION.md  ZONE_FADE_STRATEGY.md
outputs/: qa_report.md
results/: CLEANUP_SUMMARY.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  README.md  strategy_library_database.json
results/enhanced_strategy_library_1761278179/: enhanced_strategy_report.html  enhanced_strategy_results.csv  enhanced_strategy_summary.csv
results/macd_1h_2010_2025_1761254135/: SUMMARY.md  imcpt_histogram_AAPL.json  imcpt_histogram_AVGO.json  imcpt_histogram_CRM.json  imcpt_histogram_LLY.json  imcpt_histogram_ORCL.json  imcpt_histogram_QQQ.json  imcpt_histogram_SPY.json  metadata.json  metrics_is.csv  metrics_oos.csv  wfpt_histogram_AAPL.json  wfpt_histogram_AVGO.json  wfpt_histogram_CRM.json  wfpt_histogram_LLY.json  wfpt_histogram_ORCL.json  wfpt_histogram_QQQ.json  wfpt_histogram_SPY.json
results/manual_validation/: README.md  chart_analysis_template.md  validation_checklist.md
results/real_data_comprehensive_report/: real_data_validation_report.html  validation_summary.csv
results/simple_master_summary/: simple_master_summary.csv
results/simple_real_validation_1761274437/: validation_summary.json
results/strategy_library_1761277403/: strategy_library_report.html  strategy_library_results.csv
results/strategy_library_1761277536/: strategy_library_report.html  strategy_library_results.csv
results/strategy_library_1761277648/: strategy_library_report.html  strategy_library_results.csv  strategy_summary.csv
results/summaries/: backtesting_summary.txt
results/ultra_simple_summary/: all_strategy_results.csv  strategy_summary.csv  (+1 more)
scripts/: setup.sh  syntax_check.py  type_check.py
tests/: test_config.py
(+90 files in other folders)
